# itsuki_assistant_with_bedrock

./: Cargo.toml  LICENSE  README.md
src/: bedrock_service.rs  main.rs  model_constants.rs  terminal_service.rs
src/tool/: generate_image.rs  image_generator_parameter.rs  mod.rs  read_file.rs  run_python.rs
